--- a/SharedCode/PagedMultiviewTreeControl/MultiView.vcxproj.filters
+++ b/SharedCode/PagedMultiviewTreeControl/MultiView.vcxproj.filters
@@ -39,12 +39,6 @@
     <ClCompile Include="AudioSupportedContextMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="MainFrm.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="OtherView.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="ContextMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -60,13 +54,19 @@
     <ClCompile Include="MultiViewApp.cpp">
       <Filter>MultiView</Filter>
     </ClCompile>
-    <ClCompile Include="..\OtherFunctions\StringFunctions.cpp">
+    <ClCompile Include="MultiviewPrecompile.cpp">
       <Filter>LessImportantFiles</Filter>
+    </ClCompile>
+    <ClCompile Include="..\OtherFunctions\StringFunctions.cpp">
+      <Filter>OtherSharedCode</Filter>
     </ClCompile>
     <ClCompile Include="..\VariableLists\StringVectorList.cpp">
+      <Filter>OtherSharedCode</Filter>
+    </ClCompile>
+    <ClCompile Include="MainFrm.cpp">
       <Filter>LessImportantFiles</Filter>
     </ClCompile>
-    <ClCompile Include="MultiviewPrecompile.cpp">
+    <ClCompile Include="OtherView.cpp">
       <Filter>LessImportantFiles</Filter>
     </ClCompile>
   </ItemGroup>
@@ -113,12 +113,6 @@
     <ClInclude Include="PagedMultiviewVarient01.h">
       <Filter>MultiView</Filter>
     </ClInclude>
-    <ClInclude Include="MainFrm.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="MFView.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="OtherView.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -129,9 +123,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ContextMenu.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="BasicMultiviewTemplate.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="HalfPagedMultiview.h">
@@ -212,11 +203,20 @@
     <ClInclude Include="MultiViewDoc.h">
       <Filter>LessImportantFiles</Filter>
     </ClInclude>
-    <ClInclude Include="..\Databases\IniDataV2.h">
-      <Filter>LessImportantFiles</Filter>
-    </ClInclude>
     <ClInclude Include="..\MFCApp\AppSettings.h">
       <Filter>OtherSharedCode</Filter>
+    </ClInclude>
+    <ClInclude Include="MFView.h">
+      <Filter>LessImportantFiles</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Databases\IniDataV2.h">
+      <Filter>OtherSharedCode</Filter>
+    </ClInclude>
+    <ClInclude Include="BasicMultiviewTemplate.h">
+      <Filter>MultiView</Filter>
+    </ClInclude>
+    <ClInclude Include="MainFrm.h">
+      <Filter>LessImportantFiles</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
